--- a/web-deployment.yaml
+++ b/web-deployment.yaml
@@ -4,14 +4,14 @@ metadata:
   annotations:
     deployment.kubernetes.io/revision: "1"
     kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2024-07-18T21:31:09Z","generation":3,"labels":{"app":"synergychat-web"},"name":"synergychat-web","namespace":"default","resourceVersion":"3685","uid":"701e7c1b-761d-4081-9f72-f69681c4b1ca"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"synergychat-web"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"synergychat-web"}},"spec":{"containers":[{"image":"bootdotdev/synergychat-web:latest","imagePullPolicy":"Always","name":"synergychat-web","resources":{},"terminationMessagePath":"/dev/termination-log","terminationMessagePolicy":"File"}],"dnsPolicy":"ClusterFirst","restartPolicy":"Always","schedulerName":"default-scheduler","securityContext":{},"terminationGracePeriodSeconds":30}}},"status":{"availableReplicas":10,"conditions":[{"lastTransitionTime":"2024-07-18T21:31:09Z","lastUpdateTime":"2024-07-18T21:31:14Z","message":"ReplicaSet \"synergychat-web-6b7889c476\" has successfully progressed.","reason":"NewReplicaSetAvailable","status":"True","type":"Progressing"},{"lastTransitionTime":"2024-07-18T21:49:35Z","lastUpdateTime":"2024-07-18T21:49:35Z","message":"Deployment has minimum availability.","reason":"MinimumReplicasAvailable","status":"True","type":"Available"}],"observedGeneration":3,"readyReplicas":10,"replicas":10,"updatedReplicas":10}}
+      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2024-07-18T21:31:09Z","generation":4,"labels":{"app":"synergychat-web"},"name":"synergychat-web","namespace":"default","resourceVersion":"3934","uid":"701e7c1b-761d-4081-9f72-f69681c4b1ca"},"spec":{"progressDeadlineSeconds":600,"replicas":3,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"synergychat-web"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"synergychat-web"}},"spec":{"containers":[{"image":"bootdotdev/synergychat-web:latest","imagePullPolicy":"Always","name":"synergychat-web","resources":{},"terminationMessagePath":"/dev/termination-log","terminationMessagePolicy":"File"}],"dnsPolicy":"ClusterFirst","restartPolicy":"Always","schedulerName":"default-scheduler","securityContext":{},"terminationGracePeriodSeconds":30}}},"status":{"availableReplicas":3,"conditions":[{"lastTransitionTime":"2024-07-18T21:31:09Z","lastUpdateTime":"2024-07-18T21:31:14Z","message":"ReplicaSet \"synergychat-web-6b7889c476\" has successfully progressed.","reason":"NewReplicaSetAvailable","status":"True","type":"Progressing"},{"lastTransitionTime":"2024-07-18T21:49:35Z","lastUpdateTime":"2024-07-18T21:49:35Z","message":"Deployment has minimum availability.","reason":"MinimumReplicasAvailable","status":"True","type":"Available"}],"observedGeneration":4,"readyReplicas":3,"replicas":3,"updatedReplicas":3}}
   creationTimestamp: "2024-07-18T21:31:09Z"
-  generation: 4
+  generation: 5
   labels:
     app: synergychat-web
   name: synergychat-web
   namespace: default
-  resourceVersion: "3934"
+  resourceVersion: "4041"
   uid: 701e7c1b-761d-4081-9f72-f69681c4b1ca
 spec:
   progressDeadlineSeconds: 600
@@ -32,12 +32,15 @@ spec:
         app: synergychat-web
     spec:
       containers:
-      - image: bootdotdev/synergychat-web:latest
-        imagePullPolicy: Always
-        name: synergychat-web
-        resources: {}
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
+        - image: bootdotdev/synergychat-web:latest
+          imagePullPolicy: Always
+          name: synergychat-web
+          resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+          envFrom:
+            - configMapRef:
+                name: synergychat-web-configmap
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
@@ -46,19 +49,19 @@ spec:
 status:
   availableReplicas: 3
   conditions:
-  - lastTransitionTime: "2024-07-18T21:31:09Z"
-    lastUpdateTime: "2024-07-18T21:31:14Z"
-    message: ReplicaSet "synergychat-web-6b7889c476" has successfully progressed.
-    reason: NewReplicaSetAvailable
-    status: "True"
-    type: Progressing
-  - lastTransitionTime: "2024-07-18T21:49:35Z"
-    lastUpdateTime: "2024-07-18T21:49:35Z"
-    message: Deployment has minimum availability.
-    reason: MinimumReplicasAvailable
-    status: "True"
-    type: Available
-  observedGeneration: 4
+    - lastTransitionTime: "2024-07-18T21:31:09Z"
+      lastUpdateTime: "2024-07-18T21:31:14Z"
+      message: ReplicaSet "synergychat-web-6b7889c476" has successfully progressed.
+      reason: NewReplicaSetAvailable
+      status: "True"
+      type: Progressing
+    - lastTransitionTime: "2024-07-18T21:49:35Z"
+      lastUpdateTime: "2024-07-18T21:49:35Z"
+      message: Deployment has minimum availability.
+      reason: MinimumReplicasAvailable
+      status: "True"
+      type: Available
+  observedGeneration: 5
   readyReplicas: 3
   replicas: 3
   updatedReplicas: 3
